v 1.1.5.0 (6 oct)

Oil processing
Kerosene
_
Hydro Fracturer
Cryostation
_
Sefirot tree (3/11)

v 1.1.4.3 (6 oct)

Added support for crafting undo (more options coming)
Kongregate API integration

v 1.1.4.2 (26 sep)

Changes by coderpatsy:

Fix buildings not always showing that they are on
Fix active tabs not highlighting their link
Fix catnip max not being recalculated properly when buying Silos

v 1.1.4.1 (16 sep)

Changes by coderpatsy:

Fix lunar outposts converting uranium even when all are off (https://redd.it/3lbrj3)
Make sure moon programs are unlocked when converting saves
Fix negative numbers not getting postfixed
Fix postfixed numbers displaying postfix after "/s"
Fix typoed variable name (RIP usePetTickHack)

Changes by xranti:

Additional fix to lunar outpost
Removed default amount from resPool.convert function.

v 1.1.4.0 (16 sep)
Changes by coderpatsy:

Fix Steamworks not saving jammed flag and stray jammed flag on magnetos
Fix kittens briefly producing at master skill when starting a job
Trigger a save right before resetting to make sure nothing gets lost
Fix tankers not reducing storage upon crafting
Remember trade race collapsed status
Save/load message filters
Call calculateEffects when up/downgrading buildings

Lots and lots of other fixes
___
Changes by xranti:

Implemented save state migration system and moved Lunar Outpost and Moon Base to the moon planet.
Clear cached effects on load (fixes https://redd.it/3jzexn).

___
Some minor changes to decouple game logic from UI (may be useful for future mobile ports/custom clients)

v 1.1.3.5 (8 aug)
Changes by coderpatsy:

Fixes for buildings and energy penalty
___
v 1.1.3.4 (2 aug)
Changes by coderpatsy:

Shift-click for buy all space buildings and sell all
Resource hover highlights
___
Prices of Acoustics and Geology were slightly reduced

v 1.1.3.3 (30 jul)
Leader ranks in the promote link

v 1.1.3.2 (29 jul)
Changes by coderpatsy:

Storage increase in tooltips now accurate
___