@@ -13,6 +13,10 @@ v 1.1.4.3 (6 oct)
 Added support for crafting undo (more options coming)
 Kongregate API integration
 
+Changes by coderpatsy:
+
+Add Workshop Automation log filter
+
 v 1.1.4.2 (26 sep)
 
 Changes by coderpatsy:
